--- a/J adress viewer/css/stylesheet.css
+++ b/J adress viewer/css/stylesheet.css
@@ -39,6 +39,7 @@ input[type=text] {
     border-radius: 5px;
     border-width: 0px;
     color: white;
+    box-shadow: 0 0 5px 5px rgba(25, 25, 25, 0.579);
 }
 
 input[type=text]:focus {
@@ -65,6 +66,7 @@ input[type=submit] {
     bottom: 0;
     margin-bottom: 30px;
     margin-right: 30px;
+    box-shadow: 0 0 5px 5px rgba(25, 25, 25, 0.579);
 }
 
 input[type=number] {
@@ -76,6 +78,7 @@ input[type=number] {
     font-size: 25px;
     border-radius: 5px;
     border-width: 0px;
+    box-shadow: 0 0 5px 5px rgba(25, 25, 25, 0.579);
 }
 
 .save{
@@ -98,7 +101,7 @@ li{
     list-style-type: none;
     border-radius: 5px;
     border-width: 0px;
-    
+    box-shadow: 0 0 5px 5px rgba(34, 34, 34, 0.607);
 }
 
 .wrapper{
@@ -147,6 +150,7 @@ ul{
     margin-bottom: 20px;
     margin-right: 20px;
     transition-duration: 0.5s;
+    box-shadow: 0 0 5px 5px rgba(41, 41, 41, 0.579);
 }
 
 .addbutton:hover{
@@ -188,6 +192,7 @@ ul{
     float: right;
     color: rgb(255, 255, 255);
     transition-duration: 0.3s;
+    text-shadow: 0 0 5px 5px rgba(41, 41, 41, 0.579);
 }
 
 .delete:hover{
@@ -195,13 +200,14 @@ ul{
 }
 
 .functies{
-    background-color: rgba(115, 6, 154, 0.233);
+    background-color: rgba(130, 9, 174, 0.374);
     width: 500px;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     box-shadow: rgb(155, 0, 160) 2px 1px 0px 1px;
+    box-shadow: 0 0 5px 5px rgba(25, 25, 25, 0.579);
 }
 
 .popup {
@@ -226,6 +232,7 @@ ul{
     max-width: 600px;
     position: relative;
     animation: fadeIn 1s;
+    box-shadow: 0 0 5px 5px rgba(25, 25, 25, 0.579);
   }
 
   .popup-content2{
@@ -238,6 +245,7 @@ ul{
     max-width: 1160px;
     position: relative;
     animation: fadeIn 1s;
+    box-shadow: 0 0 5px 5px rgba(25, 25, 25, 0.579);
   }
 
   .close {
@@ -259,6 +267,12 @@ ul{
     border: 0px solid;
     border-radius: 5px;
     padding: 10px;
+    box-shadow: 0 0 5px 5px rgba(41, 41, 41, 0.147);
   }
+
+.logo{
+    -webkit-filter: drop-shadow(5px 5px 5px #1e1e1e9f);
+        filter: drop-shadow(0px 8px 8px #222222c1);
+}
 
 
